# axum_tmpl

./: .env.example  Cargo.toml  README.md
src/: doc.rs  error.rs  lib.rs  main.rs
src/config/: env.rs  log.rs  mod.rs  state.rs
src/handler/: mod.rs
src/schemas/: error.rs  health.rs
src/util/: extractor.rs  mod.rs
