[package]
name = "axum_tmpl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
dotenvy = "0.15.7"
envmode = "0.1.3"
envy = "0.4.2"
fern = { version = "0.7.1", features = ["colored"] }
governor = "0.10.4"
humantime = "2.3.0"
log = { version = "0.4.29", features = ["std", "serde"] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["full"] }
tower_governor = { version = "0.8.0", features = ["axum", "tracing"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
